kubernetes/apps/identity/keycloak/app/referencegrant.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-oidc-from-network
  namespace: identity
  labels:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/component: oidc
spec:
  from:
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: network
  to:
    - group: ""
      kind: Service
      name: keycloak-service
