kubernetes/apps/identity/keycloak/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
  namespace: identity
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
  hostnames:
    - "sso.matherly.net"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: keycloak-service
          port: 8080
---
