kubernetes/apps/identity/keycloak/app/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: keycloak
  namespace: identity
  labels:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/component: idp
spec:
  description: "Keycloak Application: Database access, external IdP federation, internal services"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: keycloak
  enableDefaultDeny:
    egress: false
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: keycloak-postgres
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP


    - toFQDNs:
        - matchPattern: "*.googleapis.com"
        - matchName: "accounts.google.com"
        - matchName: "oauth2.googleapis.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: tempo
            io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "4317"
              protocol: TCP
